# IBKR-Market-Data-Warehouse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  gui.py  package-lock.json  package.json  pyproject.toml
.codex/: project-memory.md
clients/: __init__.py  db_client.py  historical_provider.py  ib_client.py  uw_client.py
docs/: backtesting.md  ib_tws_api.md  observability_defensive_blueprint.md  unusual_whales_api_spec.yaml
macos/: README.md
presets/: etfs.json  ndx100-auto-transport.json  ndx100-beverages-staples.json  ndx100-biotech.json  ndx100-cloud-data.json  ndx100-cybersecurity.json  ndx100-digital-commerce.json  ndx100-energy.json  ndx100-enterprise-software.json  ndx100-industrials-services.json  ndx100-medtech.json  ndx100-mega-cap-tech-platforms.json  ndx100-misc-singles.json  ndx100-payments-fintech.json  ndx100-retail.json  ndx100-semi-equipment.json  ndx100-semiconductors.json  ndx100-storage-hardware.json  ndx100-streaming-gaming.json  ndx100-telecom-cable.json  ndx100-travel-leisure.json  ndx100-utilities.json  ndx100.json  r2k-communication.json  r2k-consumer-discretionary.json  r2k-consumer-staples.json  r2k-energy.json  r2k-financials.json  r2k-health-care.json  r2k-industrials.json  r2k-information-technology.json  r2k-materials.json  r2k-real-estate.json  r2k-tier-mid-500.json  r2k-tier-tail-500.json  r2k-tier-top-100.json  r2k-tier-top-200.json  r2k-tier-top-500.json  r2k-utilities.json  r2k.json  (+111 more)
scripts/: cerebras_client.mjs  cerebras_client.test.mjs  check_daily_update_watchdog.py  com.market-warehouse.daily-update.plist  (+12 more)
(+30 files in other folders)
