[project]
name = "market-data-warehouse"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "integration: marks tests that use real DuckDB (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["clients", "scripts"]
omit = ["tests/*", "clients/ib_client.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
